syntax = "proto3";

package protoconf.agent.config.v1;

option go_package = "github.com/protoconf/protoconf/agent/config/v1;protoconf_agent_config";

message AgentConfig {
    string grpc_address = 1 [json_name = "grpc-address"];
    string http_address = 2 [json_name = "http-address"];
    string dev_root = 3 [json_name = "dev"];
    StoreType store = 4;
    repeated string servers = 5 [json_name = "store-address"];
    string prefix = 6;

    bool insecure = 7;
    TLSConfig tls_config = 8;
    TLSConfig client_tls = 9;

    enum StoreType {
        consul = 0;
        etcd = 1;
        zookeeper = 2;
    }

    message TLSConfig {
        oneof key {
            string key_text = 1;
            string key_file = 2;
        }
        oneof cert {
            string cert_text = 3;
            string cert_file = 4;
        }
        oneof ca {
            string ca_text = 5;
            string ca_file = 6;
        }
    } 
}